<resources>
    <string name="app_name">Работа с API</string>
    <string name="weather">Weather</string>
    <string name="enter">Enter city</string>
    <string name="search">Search</string>
    <string name="name_city">City: </string>
    <string name="temp">Temperature: </string>
    <string name="press">Air pressure: </string>
    <string name="wind">Wind speed: </string>
    <string name="warn">Заполните поле "Enter city"</string>
    <string name="warn1">Данный город не найден или отсутствует подкючение к интернету</string>
</resources>